--- a/sites/all/themes/osbee/sass/_responsive.scss
+++ b/sites/all/themes/osbee/sass/_responsive.scss
@@ -827,7 +827,10 @@ $xlarge: 1024px;
         }
     }
 
-
+.front.domain-osbee-com .views-field.views-field-field-slide-caption {
+    font-size: 150%;
+    line-height: 1;
+}
 
 }
 
@@ -847,7 +850,7 @@ $xlarge: 1024px;
             }
         }
         .views-field-field-slide-caption {
-            bottom: 83px !important;
+            bottom: 75px !important;
             font-size: 200% !important;
         }
 
@@ -878,6 +881,10 @@ $xlarge: 1024px;
         display: none;
     }
 
+.front.domain-osbee-com .views-field.views-field-field-slide-caption {
+    font-size: 150%;
+    line-height: 1;
+}
 
     
 }
@@ -907,6 +914,21 @@ $xlarge: 1024px;
                 line-height: 2.5vh;
             }
         }
+    }
+
+    .views_slideshow_swiper_main {
+        .views-field-field-slide-image {
+            img {
+                margin: 0 !important;
+                width: 100% !important;
+                height: auto !important;
+            }
+        }
+        .views-field-field-slide-caption {
+            bottom: 145px !important;
+            font-size: 175% !important;
+        }
+
     }
 }
 /*
